--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
 display: block;
 margin: 10px auto;
 
+
   }
 
   .container .weatherapp {
@@ -32,24 +33,32 @@ margin: 10px auto;
     text-transform: capitalize;
   }
   
-  .dayTime {
+  .dayTime, 
+  .current-weather{
     margin-left: 30px;
     font-size: 20px;
   }
   
-  h2 {
-    margin-left:  30px;
+  .weather-icon {
+    position: relative;
+    left: 100px;
+    bottom: 50px;
+  font-size: 8em;
   }
-  
-  h3 {
-    text-align: center;
-    display: inline;
-    margin: auto;
-    padding-left: 110px;
-    padding-top: 50px;
+
+  .current-temperature {
+   text-align: center;
     font-size: 100px;
+    
   }
-  
+
+  .unit {
+    position: relative;
+    top: -110px;
+    right: -220px;
+  }
+ 
+
   a:hover,
   a:visited,
   a:link,
@@ -57,18 +66,9 @@ margin: 10px auto;
     text-decoration: none;
   }
   
-  .unit {
-    position: relative;
-    top: -45px;
-  }
  
   
-  .mainicon {
-    position: relative;
-    left: 100px;
-    bottom: 30px;
-    font-size: 4em;
-  }
+  
   
   .day {
     border: 1px solid black;
@@ -84,3 +84,6 @@ margin: 10px auto;
     font-size: 4em;
   }
   
+  .open-source-code {
+    text-align: center;
+  }
