implemented the unit conversion

--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,15 @@ margin: 10px auto;
     
   }
 
+ .active {
+  color: black;
+  cursor: default;
+}
+
+.active:hover {
+text-decoration: none;
+
+}
   .unit {
     position: relative;
     top: -110px;
