--- a/src/style.css
+++ b/src/style.css
@@ -58,28 +58,13 @@ margin: 50px auto;
     
   }
 
- .active {
-  color: black;
-  cursor: default;
-}
-
-.active:hover {
-text-decoration: none;
-
-}
   .unit {
     position: relative;
     top: -85px;
     right: -178px;
+    font-size: 20px;
   }
  
-
-  a:hover,
-  a:visited,
-  a:link,
-  a:active {
-    text-decoration: none;
-  }
   
  .wind-humidity {
    text-align: center;
